2006-06-07 Mateusz Loskot <mateusz@loskot.net>

	* tests/unit/Makefile.am,
	tests/unit/algorithm/CGAlgorithms/isPointInRingTest.cpp:
	Added new test: CGAlgorithms/isPointInRingTest.cpp.

2006-06-07 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/geom/Makefile.am,
	source/headers/geos/geom.h: removed
	Triangle.h from installed header set.

2006-06-05 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/Makefile.am,
	source/headers/geos/geosAlgorithm.h,
	source/headers/geos/indexSweepline.h,
	source/headers/geos/nodingSnapround.h,
	source/headers/geos/opDistance.h, source/headers/geos/opOverlay.h,
	source/headers/geos/opPolygonize.h,
	source/headers/geos/opPredicate.h, source/headers/geos/opRelate.h,
	source/headers/geos/planargraph.h, source/headers/geos/util.h,
	source/headers/geos/algorithm/Makefile.am,
	source/headers/geos/geom/Makefile.am,
	source/headers/geos/geom/util/Makefile.am,
	source/headers/geos/geomgraph/Makefile.am,
	source/headers/geos/geomgraph/index/Makefile.am,
	source/headers/geos/index/Makefile.am,
	source/headers/geos/index/bintree/Makefile.am,
	source/headers/geos/index/chain/Makefile.am,
	source/headers/geos/index/quadtree/Makefile.am,
	source/headers/geos/index/strtree/Makefile.am,
	source/headers/geos/index/sweepline/Makefile.am,
	source/headers/geos/io/Makefile.am,
	source/headers/geos/noding/Makefile.am,
	source/headers/geos/noding/snapround/Makefile.am,
	source/headers/geos/operation/Makefile.am,
	source/headers/geos/operation/buffer/Makefile.am,
	source/headers/geos/operation/distance/Makefile.am,
	source/headers/geos/operation/linemerge/Makefile.am,
	source/headers/geos/operation/overlay/Makefile.am,
	source/headers/geos/operation/polygonize/Makefile.am,
	source/headers/geos/operation/predicate/Makefile.am,
	source/headers/geos/operation/relate/Makefile.am,
	source/headers/geos/operation/valid/Makefile.am,
	source/headers/geos/planargraph/Makefile.am,
	source/headers/geos/planargraph/algorithm/Makefile.am,