@@ -1,7 +1,15 @@
 #geos_tests.rb runs the full Ruby geos test suite
 
-TESTS = \
-	geos_tests.rb 
+TESTS = 			\
+	example.rb		\
+	geos_tests.rb		\
+	test_combinations.rb	\
+	test_envelope.rb	\
+	test_helper.rb		\
+	test_io.rb		\
+	test_operations.rb	\
+	test_relations.rb	\
+	test_simple.rb
 
 EXTRA_DIST = $(TESTS)
 
